--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         </header>
         <div>
-            <h1>Grocery Order Form</h1>
+            <h1>Grocery Order Form - Python</h1>
             <h2>Fruits</h2>
             <p>You may only select one fruit. <span class="orange-text">Choose wisely.</span></p>
             <label>Pick your fruit:</label>
